--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "Moegal Honyaku FE",
     "version": "1.0",
     "description": "This is the frontend script of the Moegal Honyaku project.",
-    "permissions": ["scripting", "activeTab"],
+    "permissions": ["scripting", "activeTab", "storage"],
     "host_permissions": ["<all_urls>"],
     "content_scripts": [
       {
