--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,19 @@
     ],
     "action": {
       "default_title": "Moegal Honyaku",
-      "default_popup": "popup.html"
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "icon-256.png",
+        "32": "icon-256.png",
+        "48": "icon-256.png",
+        "128": "icon-256.png"
+      }
+    },
+    "icons": {
+      "16": "icon-256.png",
+      "32": "icon-256.png",
+      "48": "icon-256.png",
+      "128": "icon-256.png"
     }
   }
   
